Fix: Visual overflow of buttons in a dropdown in IE11
- https://datatables.net/forums/discussion/comment/143182#Comment_143182

Sync to source repo @5ee6d414cae6a695d6d4862aebaf632766bdb4b5

--- a/css/buttons.jqueryui.css
+++ b/css/buttons.jqueryui.css
@@ -109,6 +109,7 @@ div.dt-button-collection .dt-button {
   left: 0;
   right: 0;
   width: 100%;
+  box-sizing: border-box;
   display: block;
   float: none;
   margin-right: 0;
